친구 기능 추가